# nu_plugin_from_beancount

./: .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile  renovate.json
.github/workflows/: check.yml  release.yml
src/: example.beancount  main.rs  nu.rs  transaction.rs  transaction_v2.rs
supply-chain/: config.toml
