[package]
name = "nu_plugin_from_beancount"
version = "0.0.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
repository = "https://github.com/jcornaz/nu_plugin_from_beancount"
edition = "2021"
rust-version = "1.62"
description = "A nushell extension to load a beancount file into nu structured data"
categories = []
keywords = []

[dependencies]
nu-plugin = { version = "0.75", default-features = false }
nu-protocol = { version = "0.75", default-features = false, features = ["plugin"] }
