[package]
name = "nu_plugin_from_beancount"
version = "0.0.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
repository = "https://github.com/jcornaz/nu_plugin_from_beancount"
edition = "2021"
rust-version = "1.62"
description = "A nushell extension to load a beancount file into nu structured data"
categories = []
keywords = []

[dependencies]
beancount-parser = { version = "1", default-features = false }
nu-plugin = { version = "0.75", default-features = false }
nu-protocol = { version = "0.75", default-features = false, features = ["plugin"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
rstest = { version = "0.16", default-features = false }
